# conformal-prediction

./: Dockerfile  Makefile  README.md  pyproject.toml
docs/assets/: architecture.html
src/conformal/: __init__.py  benchmark.py  cli.py  data.py  predict.py
tests/: test_conformal.py
