[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conformal-prediction"
version = "0.1.0"
description = "Split-conformal prediction sets with a guaranteed marginal coverage — and a demonstration that naive softmax confidence is miscalibrated"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Taimour Abdul Karim", email = "taimour.a.karim@gmail.com" }]
keywords = ["conformal-prediction", "uncertainty-quantification", "calibration", "statistics", "machine-learning", "coverage"]
dependencies = ["numpy>=1.24", "scikit-learn>=1.3"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
conformal = "conformal.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/conformal"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
